--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "router": "^1.3.8",
+    "Router": "^2.1.0",
     "tailwindcss": "3.3.3",
     "yup": "^1.2.0"
   }
