--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "formik": "^2.4.2",
     "next": "13.4.12",
-    "postcss": "8.4.27",
+    "postcss": "^8.4.27",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "router": "^1.3.8",
     "Router": "^2.1.0",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "^3.3.3",
     "yup": "^1.2.0"
   }
 }
