Feat: Events Dashboard Screen || Forms Dashboard Screen || Events Model

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "formik": "^2.4.2",
