--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.7.4",
     "router": "^1.3.8",
     "Router": "^2.1.0",
     "tailwindcss": "^3.3.3",
