--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "formik": "^2.4.2",
+    "formik-devtools": "^0.1.0",
     "next": "13.4.12",
     "postcss": "^8.4.27",
     "prop-types": "^15.8.1",
