--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "router": "^1.3.8",
     "Router": "^2.1.0",
     "tailwindcss": "^3.3.3",
+    "uuid": "^9.0.1",
     "yup": "^1.2.0"
   }
 }
